codigo refactorizado y añadidas las películas

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/dotenv": "^8.2.0",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/mysql": "^2.15.26",
     "@types/node": "^22.5.5",
     "nodemon": "^3.1.5",
@@ -27,6 +28,7 @@
     "body-parser": "^1.20.3",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.3"
   }
 }
